--- a/package.json
+++ b/package.json
@@ -137,28 +137,27 @@
         "@box/frontend": "8.0.0",
         "@box/languages": "^1.0.0",
         "@box/react-virtualized": "9.22.3-rc-box.7",
+        "@chromatic-com/storybook": "^1",
         "@commitlint/cli": "^8.3.5",
         "@commitlint/config-conventional": "^8.3.4",
         "@formatjs/intl-pluralrules": "^1.5.2",
         "@formatjs/intl-relativetimeformat": "^4.5.9",
         "@formatjs/intl-unified-numberformat": "^3.2.0",
         "@hapi/address": "2.1.1",
-        "@sambego/storybook-state": "^2.0.1",
-        "@storybook/addon-actions": "^7.5.3",
-        "@storybook/addon-docs": "^8.0.8",
-        "@storybook/addon-essentials": "^7.5.3",
-        "@storybook/addon-interactions": "^7.5.3",
+        "@storybook/addon-actions": "^8.0.9",
+        "@storybook/addon-docs": "^8.0.9",
+        "@storybook/addon-essentials": "^8.0.9",
+        "@storybook/addon-interactions": "^8.0.9",
         "@storybook/addon-knobs": "^7.0.2",
-        "@storybook/addon-links": "^7.5.3",
-        "@storybook/addon-storyshots": "^7.5.3",
+        "@storybook/addon-links": "^8.0.9",
         "@storybook/addon-styling": "^1.3.7",
-        "@storybook/addon-styling-webpack": "^0.0.5",
-        "@storybook/addons": "^7.5.3",
-        "@storybook/blocks": "^7.6.11",
-        "@storybook/preview-api": "^7.6.11",
-        "@storybook/react-webpack5": "^7.5.3",
-        "@storybook/testing-library": "^0.2.2",
-        "@storybook/theming": "^7.5.3",
+        "@storybook/addon-styling-webpack": "^1.0.0",
+        "@storybook/addon-webpack5-compiler-babel": "^3.0.3",
+        "@storybook/addons": "^7.6.17",
+        "@storybook/blocks": "^8.0.9",
+        "@storybook/preview-api": "^8.0.9",
+        "@storybook/react-webpack5": "^8.0.9",
+        "@storybook/theming": "^8.0.9",
         "@svgr/core": "^5.0.1",
         "@svgr/plugin-prettier": "^5.0.1",
         "@svgr/plugin-svgo": "^5.1.0",
@@ -231,7 +230,7 @@
         "eslint-plugin-prettier": "^3.1.2",
         "eslint-plugin-react": "^7.18.0",
         "eslint-plugin-react-hooks": "^2.3.0",
-        "eslint-plugin-storybook": "^0.6.15",
+        "eslint-plugin-storybook": "^0.8.0",
         "filesize": "^4.1.2",
         "flow-bin": "^0.95.1",
         "flow-copy-source": "^2.0.9",
@@ -273,21 +272,21 @@
         "puppeteer": "^2.0.0",
         "query-string": "5.1.1",
         "raf": "^3.4.1",
-        "react": "^17.0.1",
-        "react-animate-height": "^2.0.8",
+        "react": "^18.3.1",
+        "react-animate-height": "^3.2.3",
         "react-beautiful-dnd": "^13.1.1",
         "react-docgen-typescript": "^1.16.1",
         "react-docgen-typescript-loader": "^3.6.0",
-        "react-dom": "^17.0.1",
-        "react-draggable": "^3.3.0",
+        "react-dom": "^18.3.1",
+        "react-draggable": "^4.4.6",
         "react-immutable-proptypes": "^2.1.0",
         "react-intl": "6.4.2",
         "react-measure": "^2.3.0",
         "react-modal": "^3.8.1",
         "react-popper": "^1.3.4",
         "react-process-string": "^1.2.0",
-        "react-responsive": "8.2.0",
-        "react-router-dom": "^5.0.0",
+        "react-responsive": "^10.0.0",
+        "react-router-dom": "5.3.4",
         "react-scrollbars-custom": "^4.0.21",
         "react-styleguidist": "^8.0.6",
         "react-test-renderer": "^16.13.1",
@@ -306,7 +305,8 @@
         "sinon": "^2.3.7",
         "source-map-loader": "^0.2.4",
         "start-server-and-test": "^1.10.8",
-        "storybook": "^7.6.11",
+        "storybook": "^8.0.9",
+        "storybook-react-intl": "^3.0.1",
         "string-replace-loader": "^2.2.0",
         "style-loader": "^1.0.0",
         "styled-components": "^5.0.0",
@@ -348,10 +348,10 @@
         "mousetrap": "^1.6.3",
         "pikaday": "^1.8.0",
         "query-string": "5.1.1",
-        "react": "^17.0.1",
+        "react": "^17.0.1 || ^18.0.0",
         "react-animate-height": "^2.0.8",
         "react-beautiful-dnd": "^13.1.1",
-        "react-dom": "^17.0.1",
+        "react-dom": "^17.0.1 || ^18.0.0",
         "react-draggable": "^3.3.0",
         "react-immutable-proptypes": "^2.1.0",
         "react-intl": ">=2.9.0",
@@ -362,7 +362,7 @@
         "react-responsive": "8.2.0",
         "react-router-dom": "^5.0.0",
         "react-scrollbars-custom": "^4.0.21",
-        "react-tether": "^1.0.0",
+        "react-tether": "1.0.5",
         "react-textarea-autosize": "^8.5.3",
         "regenerator-runtime": "^0.13.2",
         "sanitize-html": "1.21.1",
@@ -379,8 +379,7 @@
     },
     "resolutions": {
         "ip": "1.1.8",
-        "terser-webpack-plugin": "^4.2.3",
-        "**/react-intl/**/@types/react": "^16.9.18"
+        "terser-webpack-plugin": "^4.2.3"
     },
     "overrides": {
         "draft-js": {
@@ -394,5 +393,9 @@
     },
     "msw": {
         "workerDirectory": [".storybook/public"]
+    },
+    "dependencies": {
+        "@sambego/storybook-state": "^2.0.1",
+        "@storybook/test": "^8.0.9"
     }
 }
